test/Fixtures/InvalidSuites/Test/StaticMethods.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites\Test;

<<TestSuite>>
class StaticMethods
{
    <<Test>>
    public static function setItUp(\HackPack\HackUnit\Assert $assert) : void
    {
    }
}
